k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xankong-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: xankong
